feat: Added comments to events
