# main-service/src/main/resources/api-spec.yaml
@@ -1,4 +1,3 @@
-
 openapi: 3.0.1
 info:
   title: Main service API
@@ -533,6 +532,53 @@ paths:
       summary: Удаление пользователя
       tags:
         - 'Admin: Пользователи'
+  /admin/events/{eventId}/comments/{commentId}:
+    delete:
+      description: 'Удаление комментария администратором'
+      operationId: deleteCommentByAdmin
+      parameters:
+        - description: id события
+          in: path
+          name: eventId
+          required: true
+          schema:
+            type: integer
+            format: int64
+        - description: id комментария
+          in: path
+          name: commentId
+          required: true
+          schema:
+            type: integer
+            format: int64
+      responses:
+        '204':
+          description: Комментарий удален
+        '404':
+          content:
+            application/json:
+              example:
+                status: NOT_FOUND
+                reason: The required object was not found.
+                message: Comment with id=13 was not found
+                timestamp: '2022-09-07 09:10:50'
+              schema:
+                $ref: '#/components/schemas/ApiError'
+          description: Комментарий не найден
+        '409':
+          content:
+            application/json:
+              example:
+                status: CONFLICT
+                reason: For the requested operation the conditions are not met.
+                message: User is not allowed to delete this comment
+                timestamp: '2023-01-21 16:56:19'
+              schema:
+                $ref: '#/components/schemas/ApiError'
+          description: Запрещено удалять комментарии других пользователей
+      summary: Удаление комментария администратором
+      tags:
+        - 'Admin: События'
   /categories:
     get:
       description: В случае, если по заданным фильтрам не найдено ни одной категории, возвращает пустой список
@@ -1356,6 +1402,309 @@ paths:
       summary: Отмена своего запроса на участие в событии
       tags:
         - 'Private: Запросы на участие'
+  /users/{userId}/events/{eventId}/comments:
+    post:
+      description: 'Получение комментариев пользователя к событию'
+      operationId: addUserComment
+      parameters:
+        - description: id текущего пользователя
+          in: path
+          name: userId
+          required: true
+          schema:
+            type: integer
+            format: int64
+        - description: id события
+          in: path
+          name: eventId
+          required: true
+          schema:
+            type: integer
+            format: int64
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/CommentDto'
+      responses:
+        '201':
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/FullCommentDto'
+          description: Комментарий добавлен
+        '400':
+          content:
+            application/json:
+              example:
+                status: BAD_REQUEST
+                reason: Incorrectly made request.
+                message: 'Failed to convert value of type java.lang.String to required type int; nested exception is java.lang.NumberFormatException: For input string: ad'
+                timestamp: '2022-09-07 09:10:50'
+              schema:
+                $ref: '#/components/schemas/ApiError'
+          description: Запрос составлен некорректно
+        '404':
+          content:
+            application/json:
+              example:
+                status: NOT_FOUND
+                reason: The required object was not found.
+                message: Event with id=2 was not found
+                timestamp: '2022-09-07 09:10:50'
+              schema:
+                $ref: '#/components/schemas/ApiError'
+          description: Запрос не найден или недоступен
+        '409':
+          content:
+            application/json:
+              example:
+                status: CONFLICT
+                reason: For the requested operation the conditions are not met.
+                message: The category is not empty
+                timestamp: '2023-01-21 16:56:19'
+              schema:
+                $ref: '#/components/schemas/ApiError'
+          description: Пользователь не может удалять комментари других пользователей
+      summary: Добавление нового комментария
+      tags:
+        - 'Private: События'
+    get:
+      description: 'Получение всех комментариев к событию'
+      operationId: getComments
+      parameters:
+        - description: id текущего пользователя
+          in: path
+          name: userId
+          required: true
+          schema:
+            type: integer
+            format: int64
+        - description: id события
+          in: path
+          name: eventId
+          required: true
+          schema:
+            type: integer
+            format: int64
+      responses:
+        '200':
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/FullCommentDto'
+          description: Комментарий добавлен
+        '400':
+          content:
+            application/json:
+              example:
+                status: BAD_REQUEST
+                reason: Incorrectly made request.
+                message: 'Failed to convert value of type java.lang.String to required type int; nested exception is java.lang.NumberFormatException: For input string: ad'
+                timestamp: '2022-09-07 09:10:50'
+              schema:
+                $ref: '#/components/schemas/ApiError'
+          description: Запрос составлен некорректно
+        '404':
+          content:
+            application/json:
+              example:
+                status: NOT_FOUND
+                reason: The required object was not found.
+                message: User with id=2 was not found
+                timestamp: '2022-09-07 09:10:50'
+              schema:
+                $ref: '#/components/schemas/ApiError'
+          description: Запрос не найден или недоступен
+      summary: Получение всех комментариев пользователя к событию
+      tags:
+        - 'Private: События'
+  /users/{userId}/events/{eventId}/comments/{commentId}:
+    get:
+      description: 'Получение комментария пользователя'
+      operationId: getComment
+      parameters:
+        - description: id текущего пользователя
+          in: path
+          name: userId
+          required: true
+          schema:
+            type: integer
+            format: int64
+        - description: id события
+          in: path
+          name: eventId
+          required: true
+          schema:
+            type: integer
+            format: int64
+        - description: id комментария
+          in: path
+          name: commentId
+          required: true
+          schema:
+            type: integer
+            format: int64
+      responses:
+        '200':
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/FullCommentDto'
+          description: Комментарий изменен
+        '400':
+          content:
+            application/json:
+              example:
+                status: BAD_REQUEST
+                reason: Incorrectly made request.
+                message: 'Failed to convert value of type java.lang.String to required type int; nested exception is java.lang.NumberFormatException: For input string: ad'
+                timestamp: '2022-09-07 09:10:50'
+              schema:
+                $ref: '#/components/schemas/ApiError'
+          description: Запрос составлен некорректно
+        '404':
+          content:
+            application/json:
+              example:
+                status: NOT_FOUND
+                reason: The required object was not found.
+                message: Comment with id=2 was not found
+                timestamp: '2022-09-07 09:10:50'
+              schema:
+                $ref: '#/components/schemas/ApiError'
+          description: Запрос не найден или недоступен
+      summary: Получение комментария по идентификатору
+      tags:
+        - 'Private: События'
+    patch:
+      description: 'Редактирование комментария пользователя'
+      operationId: updateComment
+      parameters:
+        - description: id текущего пользователя
+          in: path
+          name: userId
+          required: true
+          schema:
+            type: integer
+            format: int64
+        - description: id события
+          in: path
+          name: eventId
+          required: true
+          schema:
+            type: integer
+            format: int64
+        - description: id комментария
+          in: path
+          name: commentId
+          required: true
+          schema:
+            type: integer
+            format: int64
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/CommentDto'
+      responses:
+        '201':
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/FullCommentDto'
+          description: Комментарий изменен
+        '400':
+          content:
+            application/json:
+              example:
+                status: BAD_REQUEST
+                reason: Incorrectly made request.
+                message: 'Failed to convert value of type java.lang.String to required type int; nested exception is java.lang.NumberFormatException: For input string: ad'
+                timestamp: '2022-09-07 09:10:50'
+              schema:
+                $ref: '#/components/schemas/ApiError'
+          description: Запрос составлен некорректно
+        '404':
+          content:
+            application/json:
+              example:
+                status: NOT_FOUND
+                reason: The required object was not found.
+                message: Comment with id=2 was not found
+                timestamp: '2022-09-07 09:10:50'
+              schema:
+                $ref: '#/components/schemas/ApiError'
+          description: Запрос не найден или недоступен
+        '409':
+          content:
+            application/json:
+              example:
+                status: CONFLICT
+                reason: For the requested operation the conditions are not met.
+                message: The category is not empty
+                timestamp: '2023-01-21 16:56:19'
+              schema:
+                $ref: '#/components/schemas/ApiError'
+          description: Пользователь не может удалять комментари других пользователей
+      summary: Редактирование комментария
+      tags:
+        - 'Private: События'
+    delete:
+      description: 'Удаление комментария пользователем'
+      operationId: deleteComment
+      parameters:
+        - description: id текущего пользователя
+          in: path
+          name: userId
+          required: true
+          schema:
+            type: integer
+            format: int64
+        - description: id события
+          in: path
+          name: eventId
+          required: true
+          schema:
+            type: integer
+            format: int64
+        - description: id комментария
+          in: path
+          name: commentId
+          required: true
+          schema:
+            type: integer
+            format: int64
+      responses:
+        '204':
+          description: Комментарий удален
+        '404':
+          content:
+            application/json:
+              example:
+                status: NOT_FOUND
+                reason: The required object was not found.
+                message: Comment with id=13 was not found
+                timestamp: '2022-09-07 09:10:50'
+              schema:
+                $ref: '#/components/schemas/ApiError'
+          description: Комментарий не найден
+        '409':
+          content:
+            application/json:
+              example:
+                status: CONFLICT
+                reason: For the requested operation the conditions are not met.
+                message: User is not allowed to delete this comment
+                timestamp: '2023-01-21 16:56:19'
+              schema:
+                $ref: '#/components/schemas/ApiError'
+          description: Запрещено удалять комментарии других пользователей
+      summary: Удаление комментария пользователем
+      tags:
+        - 'Private: События'
 components:
   schemas:
     ApiError:
@@ -1364,7 +1713,7 @@ components:
         errors:
           type: array
           description: Список стектрейсов или описания ошибок
-          example: []
+          example: [ ]
           items:
             type: string
             description: Список стектрейсов или описания ошибок
@@ -1606,6 +1955,10 @@ components:
           description: Количество просмотрев события
           format: int64
           example: 999
+        comments:
+          type: array
+          items:
+            $ref: '#/components/schemas/FullCommentDto'
     EventRequestStatusUpdateRequest:
       type: object
       properties:
@@ -2026,3 +2379,46 @@ components:
           description: Имя
           example: Фёдоров Матвей
       description: Пользователь (краткая информация)
+    CommentDto:
+      required:
+        - text
+      type: object
+      properties:
+        text:
+          type: string
+          description: Текст комментария
+          example: Это новый комментарий пользователя
+    FullCommentDto:
+      required:
+        - id
+        - eventId
+        - userId
+        - text
+        - created
+      properties:
+        id:
+          type: integer
+          description: Идентификатор
+          format: int64
+          example: 1
+        eventId:
+          type: integer
+          description: Идентификатор события
+          format: int64
+          example: 1
+        userId:
+          type: integer
+          description: Идентификатор пользователя
+          format: int64
+          example: 1
+        text:
+          type: string
+          description: Текст комментария
+          example: Это новый комментарий пользователя
+        created:
+          type: string
+          description: Дата и время создания комментария
+          example: '2022-09-06T21:10:05.432'
+
+
+
